--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -1,6 +1,7 @@
 .time {
     text-align: center;
     padding: 32px;
+    position: relative;
 }
 
 .time h3 {
@@ -16,4 +17,10 @@
     margin: 32px 0;
     gap: 32px;
     flex-wrap: wrap;
+}
+
+.input-cor {
+    position: absolute;
+    top: 20px;
+    right: 50px;
 }
