responsividade aplicada com media queries

--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -16,3 +16,15 @@
     font-weight: 400;
     font-size: 32px;
 }
+
+@media screen and (max-width: 768px) {
+    .formulario-container {
+        margin: 50px 30px;
+    }
+    .formulario-container .formulario {
+        padding: 24px 28px;
+    }
+    .formulario-container .formulario h2{
+        font-size: 24px;
+    }
+}
