--- a/src/componentes/Botao/Botao.css
+++ b/src/componentes/Botao/Botao.css
@@ -13,3 +13,10 @@
 .botao:hover {
     color: #95FFD4;
 }
+
+@media screen and (max-width: 768px) {
+    .botao {
+        padding: 18px;
+        font-size: 16px;
+    }
+}
