--- a/src/componentes/Campo/Campo.css
+++ b/src/componentes/Campo/Campo.css
@@ -22,3 +22,19 @@
     height: 40px;
     padding: 5px 24px;
 }
+
+@media screen and (max-width: 768px) {
+    .campo label {
+        font-size: 18px;
+    }
+    .campo input {
+        font-size: 18px;
+        padding: 16px;
+    }
+    .campo input::placeholder {
+        font-size: 16px;
+    }
+    .campo-color input {
+        height: 50px;
+    }
+}
