--- a/src/componentes/ListaSuspensa/ListaSuspensa.css
+++ b/src/componentes/ListaSuspensa/ListaSuspensa.css
@@ -17,3 +17,13 @@
     padding: 24px;
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 768px) {
+    .lista-suspensa label {
+        font-size: 18px;
+    }
+    .lista-suspensa select {
+        font-size: 18px;
+        padding: 16px;
+    }
+}
