--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -24,3 +24,12 @@
     top: 20px;
     right: 50px;
 }
+
+@media screen and (max-width: 768px) {
+    .time h1 {
+        font-size: 20px;
+    }
+    .time h3 {
+        font-size: 24px;
+    }
+}
