--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,36 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .times {
-  text-align: center;
+	text-align: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
 }
 
 h1 {
-  font-size: 40px;
-  color: #6278F7;
-  border-bottom: 4px solid #6278F7;
-  display: inline-block;
-  padding-bottom: 24px;
-  margin: 32px 0;
+	font-size: 40px;
+	color: #6278F7;
+	border-bottom: 4px solid #6278F7;
+	display: inline-block;
+	padding-bottom: 24px;
+	margin: 32px 0;
 }
 
 h1, h2 {
-  font-family: 'Prata', serif;
+	font-family: 'Prata', serif;
+}
+
+@media screen and (max-width: 768px) {
+	h1 {
+		font-size: 32px;
+	}
 }
